--- a/Los_Angeles_Crime_2020.ipynb
+++ b/Los_Angeles_Crime_2020.ipynb
@@ -71,7 +71,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 102
         },
         "outputId": "581a81dd-146a-4fca-d18f-e89897b5c665"
       },
@@ -149,7 +149,7 @@
         "colab": {}
       },
       "source": [
-        "#clean and prepare the data - 51.6s\n",
+        "#clean and prepare the data \n",
         "\n",
         "def clean_this(file_to_clean):\n",
         "    '''\n",
